Add more hacks. This is getting out of hand. I need to sit down and remove redundant ones some time soon